fixed overflow x

--- a/src/assets/style/utilities.scss
+++ b/src/assets/style/utilities.scss
@@ -3,7 +3,7 @@
     align-items: center;
     justify-content: space-between;
     width: 80%;
-    // min-width: 1000px;
+    min-width: 1000px;
     height: 100%;
     margin: 0 auto;
 }
